--- a/src/index.css
+++ b/src/index.css
@@ -587,9 +587,35 @@ td {
   /* margin-bottom: 5%;
   margin-top: 4.5%; */
   margin-top: 30px;
-  margin-bottom: 35px;
+  margin-bottom: 15px;
   text-align: center;
   letter-spacing: 1px;
+}
+
+.adduser-head-role {
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: "Prompt";
+  margin-left: 3px;
+  color: #fff;
+  /*margin-bottom: 5%;
+  margin-top: 4.5%;
+  */ /*margin-top: 30px;
+  */
+  margin-bottom: 20px;
+  text-align: center;
+  letter-spacing: 1px;
+  width: 30%;
+  height: 25px;
+  background-color: #03a96cb4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 
 .adduser-head-table {
@@ -782,6 +808,18 @@ td {
   width: 100%;
 }
 
+.status-switch {
+  width: 100%;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.extra-status {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .agency {
   width: 100%;
 }
@@ -892,12 +930,99 @@ td {
 ////////////////////////////// EDIT MODAL
 ******************************************************************************/
 .field-description-input-edit {
-  font-family: "kanit";
-  font-size: 1.7rem;
-  width: 30%;
+  font-family: "Prompt";
+  font-size: 1.5rem;
+  font-weight: 400;
+  width: 45%;
   margin-left: 7%;
   /* background-color:#e4e6e5c2; */
 }
+
+.back-modal {
+  min-height: 100vh;
+}
+
+.edit-page-all {
+  margin-top: 40px;
+}
+
+.error-helptext-modal-edit {
+  font-family: "Prompt";
+  font-size: 1rem;
+  font-weight: 400;
+  color: red;
+  margin-bottom: -3px;
+}
+
+#correct-modal {
+  font-size: 7rem;
+  margin-right: 5px;
+  margin-top: 10px;
+  color: #03a91fa8;
+  --ionicon-stroke-width: 70px;
+}
+
+.filed-input-adduser-modal {
+  display: flex;
+  /* justify-content: flex-start; */
+  margin-bottom: 3%;
+}
+
+.head-modal-and-icon {
+  display: flex;
+  align-items: center;
+}
+
+#input-field-adduser-modal {
+  background-color: #e4e6e573;
+  font-size: 1.4rem;
+  font-family: "Prompt";
+  font-weight: 300;
+  height: 35px;
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  padding-left: 20px;
+  width: 80%;
+  border: 1px solid #6366653b;
+}
+
+.btn-lg {
+  /*font-size: 2.5rem;
+  */
+  font-family: "Prompt";
+  width: 90%;
+  margin-top: 2%;
+  margin-bottom: 3%;
+  border: 0px;
+  color: #fff;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.ddanger {
+  background-color: rgba(255, 0, 0, 0.678);
+}
+
+.ssuccess {
+  background-color: #03a96ccb;
+}
+
+.ddanger:hover {
+  background-color: rgba(255, 0, 0, 0.795);
+}
+
+.ssuccess:hover {
+  background-color: #03a96ce5;
+}
+
+/* background-color: rgba(255, 255, 255, 0.397);
+box-shadow: 0px 0px 7px 0px rgba(10, 10, 10, 0.178); */
 
 /* modal::before,
 .edit-modal-in::before {
@@ -921,19 +1046,24 @@ td {
 
 .adduser-header-edit-modal {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-bottom: 1.2%;
-  background-color: #4caf4f10;
-  background: -webkit-linear-gradient(
+  align-items: center;
+  /* margin-bottom: 1.2%; */
+  background-color: #e4e6e5;
+  /* background-color: rgba(255, 255, 255, 0.397); */
+  /* box-shadow: 0px 0px 7px 0px rgba(10, 10, 10, 0.178); */
+  /* background: -webkit-linear-gradient(
     top,
     rgba(255, 0, 0, 0),
     rgba(49, 49, 49, 0.712)
-  );
-  border-radius: 2px;
+  ); */
+  /* border-radius: 2px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 2px;
   -ms-border-radius: 2px;
-  -o-border-radius: 2px;
+  -o-border-radius: 2px; */
+  /* margin-bottom: 20px; */
 }
 
 .adduser-head-edit-modal {
@@ -964,6 +1094,10 @@ td {
   -o-border-radius: 10px;
   box-shadow: 0px 0px 10px 0px #000;
 } */
+
+.status-box {
+  margin-left: -20px;
+}
 
 input[type="checkbox"] {
   position: relative;
@@ -1022,7 +1156,7 @@ input:checked[type="checkbox"]::before {
 .toggle {
   position: relative;
   display: inline;
-  margin-left: 10%;
+  margin-left: 0%;
 }
 
 .labell {
